Adding pagination components #11

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
       </div>
 
       <div class="content">
-
         <div id="create-todo">
           <input id="new-todo" placeholder="what tasks need to be done?" type="text" />
           <span class="ui-tooltip-top" style="display:none;">Press Enter to save this task</span>
@@ -23,7 +22,7 @@
           <ul id="todo-list" class="todo-list connectedSortable"></ul>
         </div>
         <div id="todo-stats"></div>
-
+        <div id="navigator"></div>
       </div>
 </div>
 </body>
